--- a/data-raw/inst/Markdown/_Write_Cndt_Mdls_Tests.Rmd
+++ b/data-raw/inst/Markdown/_Write_Cndt_Mdls_Tests.Rmd
@@ -20,7 +20,7 @@ cmprsns_ls <- TTU::write_mdl_cmprsn(scored_data_tb = data_tb,
 
 Select preferred model types.
 
-```{r echo = !is.null(params_ls$prefd_mdl_types_chr), message=FALSE, results='hide', warning=FALSE}
+```{r echo = !is.null(params_ls$prefd_mdl_types_chr), eval= !is.null(params_ls$prefd_mdl_types_chr), message=FALSE, results='hide', warning=FALSE}
 if(!is.null(params_ls$prefd_mdl_types_chr)){
   cmprsns_ls$mdl_smry_ls$prefd_mdl_types_chr <- params_ls$prefd_mdl_types_chr
 }
@@ -39,7 +39,7 @@ cmprsns_ls <- TTU::write_predr_and_covars_cmprsn(scored_data_tb = data_tb,
 
 `r ifelse(!is.null(params_ls$prefd_covars_chr),"Specify the covariates to include.","")`
 
-```{r message=FALSE, results='hide', warning=FALSE}
+```{r echo = !is.null(params_ls$prefd_covars_chr), eval = !is.null(params_ls$prefd_covars_chr), message=FALSE, results='hide', warning=FALSE}
 if(!is.null(params_ls$prefd_covars_chr)){
   cmprsns_ls$mdl_smry_ls$prefd_covars_chr <- params_ls$prefd_covars_chr
 }
