--- a/data-raw/inst/Markdown/_Write_Suplry_Analysis.Rmd
+++ b/data-raw/inst/Markdown/_Write_Suplry_Analysis.Rmd
@@ -17,6 +17,12 @@ outp_smry_ls$mdl_nms_ls <- outp_smry_ls$mdl_nms_ls %>%
   purrr::map(~.x[!.x %in% existing_mdls_chr]) %>%
   purrr::compact()
 ```
+```{r}
+outp_smry_ls$predr_vars_nms_ls <- outp_smry_ls$predr_vars_nms_ls[outp_smry_ls$predr_vars_nms_ls %>% purrr::map_lgl(~{
+        test_chr <- .x
+        !any(existing_predrs_ls %>% purrr::map_lgl(~identical(.x,test_chr))
+        )})]
+```
 
 ### Create time series models
 ```{r, child=c('_Write_TS_Mdls.Rmd')}
