fake data edits to rmds

--- a/data-raw/inst/Markdown/Report.Rmd
+++ b/data-raw/inst/Markdown/Report.Rmd
@@ -49,6 +49,7 @@ params:
   abstract_args_ls: !r NULL
   append_params_ls: !r NULL
   eval_1L_lgl: !r FALSE
+  fake_ds_tb: !r NULL
   header_yaml_args_ls: !r NULL
   output_type_1L_chr: "PDF"
   nbr_of_digits_1L_int: !r 2L
