more rmd updates

--- a/Fake/Markdown/Report_TS_Mdls.Rmd
+++ b/Fake/Markdown/Report_TS_Mdls.Rmd
@@ -46,55 +46,49 @@ output:
       - '--lua-filter=Filters/author-info-blocks.lua'
       - '--lua-filter=Filters/pagebreaks.lua'
 params:
-  candidate_covar_nms_chr: !r NA_character_
-  ds_descvs_ls: !r NULL
-  dv_ds_nm_and_url_chr: !r NULL
-  fake_ds_tb: !r NULL
-  iters_1L_int: !r 4000L
-  maui_scoring_fn: !r NULL
-  mdl_smry_ls: !r NULL
-  nbr_of_digits_1L_int: !r 2L
-  output_type_1L_chr: "PDF"
-  path_from_top_level_1L_chr: !r NULL
-  path_to_data_from_top_level_chr: !r NULL
-  prefd_covars_chr: !r NA_character_
-  prefd_mdl_types_chr: !r c("GLM_GSN_LOG","OLS_CLL")
-  predictors_lup: !r youthvars::predictors_lup
-  prototype_lup: !r TTU::prototype_lup
-  raw_ds_tfmn_fn: !r NULL
-  rprt_type_1L_chr: "Analysis"
-  seed_1L_int: 12345
-  subtitle_1L_chr: "Main analysis algorithm for Transfer to Utility study"
-  use_fake_data_1L_lgl: TRUE
-  utl_class_fn_1L_chr: !r NULL
+  existing_predrs_ls: !r NULL
+  outp_smry_ls: !r NULL
+  output_type_1L_chr: HTML
+  rltv_path_to_data_dir_1L_chr: ../Output/F_TS_Mdls
+  subtitle_1L_chr: "Catalogue of time series models"
+  root_dir_1L_chr: ./
+  section_type_1L_chr: "#"
 subtitle: "`r params$subtitle_1L_chr`"
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
+graphics: yes
 ---
+
 ```{r setup, include=FALSE}
+library(TTU)
+library(magrittr)
 knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(comment = NA)
+knitr::opts_knit$set(root.dir = params$root_dir_1L_chr)
+options(tinytex.verbose = TRUE)
+options(xtable.floating = FALSE)
+options(xtable.timestamp = "")
 ```
 
-# Set up workspace
-```{r, child=c('_Set_Up_WS.Rmd')}
+```{r include=FALSE}
+params_ls <- params
 ```
 
-# Ingest and pre-process dataset
-```{r, child=c('_Import_And_Tf_Ds.Rmd')}
-```
+```{r echo=FALSE}
+predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = params_ls$outp_smry_ls$predr_cmprsn_tb$predr_chr, 
+                       covars_ls = list(params_ls$outp_smry_ls$prefd_covars_chr),
+                       existing_predrs_ls = params_ls$existing_predrs_ls 
+                       )
 
-# Verify data integrity
-```{r, child=c('_Test_Data_Integrity.Rmd')}
+knit_pars_ls <- make_knit_pars_ls(rltv_path_to_data_dir_1L_chr = params_ls$rltv_path_to_data_dir_1L_chr,
+                  mdl_types_chr = params_ls$outp_smry_ls$prefd_mdl_types_chr,
+                  predr_vars_nms_ls = predr_vars_nms_ls,
+                  mdl_types_lup = TTU::mdl_types_lup, 
+                  plt_types_lup = TTU::plt_types_lup,
+                  output_type_1L_chr = params_ls$output_type_1L_chr,
+                  section_type_1L_chr = params_ls$section_type_1L_chr
+                  ) 
 ```
-
-# Describe data
-```{r, child=c('_Write_Descriptives.Rmd')}
+```{r, echo=FALSE, results='asis'}
+ knit_pars_ls %>%
+  purrr::walk(~knit_mdl_rprt(.x, path_to_mdl_rprt_tmpl_1L_chr = "_mdl_rpt_tmpl.Rmd"))
 ```
-
-# Analyse data
-```{r, child=c('_Write_Main_Analysis.Rmd')}
-```
-
-# Save record of analysis
-```{r, child=c('_Write_Analysis_Mthd_Smry.Rmd')}
-```
-
