--- a/Fake/Markdown/Report.Rmd
+++ b/Fake/Markdown/Report.Rmd
@@ -46,55 +46,33 @@ output:
       - '--lua-filter=Filters/author-info-blocks.lua'
       - '--lua-filter=Filters/pagebreaks.lua'
 params:
-  candidate_covar_nms_chr: !r NA_character_
-  ds_descvs_ls: !r NULL
-  dv_ds_nm_and_url_chr: !r NULL
+  abstract_args_ls: !r NULL
+  append_params_ls: !r NULL
+  eval_1L_lgl: !r FALSE
   fake_ds_tb: !r NULL
-  iters_1L_int: !r 4000L
-  maui_scoring_fn: !r NULL
-  mdl_smry_ls: !r NULL
-  nbr_of_digits_1L_int: !r 2L
+  header_yaml_args_ls: !r NULL
   output_type_1L_chr: "PDF"
+  nbr_of_digits_1L_int: !r 2L
   path_from_top_level_1L_chr: !r NULL
   path_to_data_from_top_level_chr: !r NULL
-  prefd_covars_chr: !r NA_character_
-  prefd_mdl_types_chr: !r c("GLM_GSN_LOG","OLS_CLL")
-  predictors_lup: !r youthvars::predictors_lup
-  prototype_lup: !r TTU::prototype_lup
-  raw_ds_tfmn_fn: !r NULL
-  rprt_type_1L_chr: "Analysis"
-  seed_1L_int: 12345
-  subtitle_1L_chr: "Main analysis algorithm for Transfer to Utility study"
+  rprt_lup: !r NULL
+  rprt_nm_1L_chr: !r NA_character_
+  rprt_output_type_1L_chr: "PDF"
+  rprt_subtitle_1L_chr: !r NA_character_
+  rprt_type_1L_chr: "Report"
+  subtitle_1L_chr: !r NA_character_
   use_fake_data_1L_lgl: TRUE
-  utl_class_fn_1L_chr: !r NULL
-subtitle: "`r params$subtitle_1L_chr`"
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
+subtitle: "`r params$subtitle_1L_chr`"
 ---
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
 # Set up workspace
 ```{r, child=c('_Set_Up_WS.Rmd')}
 ```
 
-# Ingest and pre-process dataset
-```{r, child=c('_Import_And_Tf_Ds.Rmd')}
+```{r, child=c('_Get_Outp_Smry.Rmd')}
 ```
 
-# Verify data integrity
-```{r, child=c('_Test_Data_Integrity.Rmd')}
+# Create report
+```{r, child=c('_Write_Report.Rmd')}
 ```
-
-# Describe data
-```{r, child=c('_Write_Descriptives.Rmd')}
-```
-
-# Analyse data
-```{r, child=c('_Write_Main_Analysis.Rmd')}
-```
-
-# Save record of analysis
-```{r, child=c('_Write_Analysis_Mthd_Smry.Rmd')}
-```
-
