--- a/Fake/Markdown/Supplement.Rmd
+++ b/Fake/Markdown/Supplement.Rmd
@@ -47,29 +47,27 @@ output:
       - '--lua-filter=Filters/pagebreaks.lua'
 params:
   candidate_covar_nms_chr: !r NA_character_
+  candidate_predrs_chr: !r NA_character_
   ds_descvs_ls: !r NULL
-  dv_ds_nm_and_url_chr: !r NULL
   fake_ds_tb: !r NULL
   iters_1L_int: !r 4000L
-  maui_scoring_fn: !r NULL
   mdl_smry_ls: !r NULL
   nbr_of_digits_1L_int: !r 2L
   output_type_1L_chr: "PDF"
   path_from_top_level_1L_chr: !r NULL
   path_to_data_from_top_level_chr: !r NULL
-  prefd_covars_chr: !r NA_character_
+  predictors_lup: !r NULL
+  prefd_covars_chr: !r NULL
   prefd_mdl_types_chr: !r c("GLM_GSN_LOG","OLS_CLL")
-  predictors_lup: !r youthvars::predictors_lup
-  prototype_lup: !r TTU::prototype_lup
-  raw_ds_tfmn_fn: !r NULL
-  rprt_type_1L_chr: "Analysis"
+  rprt_type_1L_chr: "Supplement"
   seed_1L_int: 12345
-  subtitle_1L_chr: "Main analysis algorithm for Transfer to Utility study"
+  subtitle_1L_chr: "Secondary analysis algorithm for Transfer to Utility study"
+  transform_paths_ls: !r NULL
   use_fake_data_1L_lgl: TRUE
-  utl_class_fn_1L_chr: !r NULL
 subtitle: "`r params$subtitle_1L_chr`"
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
 ---
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
@@ -78,20 +76,15 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r, child=c('_Set_Up_WS.Rmd')}
 ```
 
-# Ingest and pre-process dataset
-```{r, child=c('_Import_And_Tf_Ds.Rmd')}
-```
-
-# Verify data integrity
-```{r, child=c('_Test_Data_Integrity.Rmd')}
-```
-
-# Describe data
-```{r, child=c('_Write_Descriptives.Rmd')}
+# Get data
+```{r, child=c('_Get_Outp_Smry.Rmd')}
 ```
 
 # Analyse data
-```{r, child=c('_Write_Main_Analysis.Rmd')}
+```{r, child=c('_Specify_Scdry_Params.Rmd')}
+```
+
+```{r, child=c('_Write_Suplry_Analysis.Rmd')}
 ```
 
 # Save record of analysis
