--- a/inst/Markdown/_Transform_Ds_For_Analysis.Rmd
+++ b/inst/Markdown/_Transform_Ds_For_Analysis.Rmd
@@ -9,7 +9,7 @@ Add variables for the interval between and number of data collection rounds.
 
 ```{r }
 data_tb <- data_tb %>% 
-  youthvars::add_interval_var() %>%
+  youthvars::add_interval_var(id_var_nm_1L_chr = ds_descvs_ls$id_var_nm_1L_chr) %>%
   youthvars::add_participation_var(id_var_nm_1L_chr = ds_descvs_ls$id_var_nm_1L_chr,
                         fup_round_nmbr_1L_int = length(ds_descvs_ls$round_vals_chr))
 
