fixes for date of collection for fake data

--- a/vignettes/Model_EQ5D_TTU.Rmd
+++ b/vignettes/Model_EQ5D_TTU.Rmd
@@ -72,6 +72,7 @@ ds_descvs_ls <- list(candidate_predrs_chr = c("k10_int","psych_well_int"),
                      cohort_descv_var_nms_chr = c("d_age", "d_agegroup", "Gender", "d_relation_s","d_sexual_ori_s", "Region", "CALD", "d_studying_working"),
                      dictionary_tb = TTU::make_eq5d_ds_dict(fake_ds_tb), 
                      id_var_nm_1L_chr = "uid", 
+                     msrmnt_date_var_nm_1L_chr = "data_collection_dtm",
                      round_var_nm_1L_chr = "Timepoint", 
                      round_vals_chr = c("BL", "FUP"),
                      maui_item_pfx_1L_chr = NA_character_, 
