--- a/inst/Markdown/Analyse.Rmd
+++ b/inst/Markdown/Analyse.Rmd
@@ -51,6 +51,7 @@ params:
   dv_ds_nm_and_url_chr: !r NULL
   fake_ds_tb: !r NULL
   iters_1L_int: !r 4000L
+  maui_domains_pfcs_1L_chr: "vD"
   maui_itm_short_nms_chr: !r c("Household tasks", "Getting around","Morbility","Self care","Enjoy close rels","Family rels", "Community involvement","Despair","Worry", "Sad", "Agitated","Energy level","Control", "Coping","Frequency of pain", "Degree of pain","Pain interference","Vision", "Hearing","Communication")
   maui_scoring_fn: !r NULL
   mdl_smry_ls: !r NULL
