updated make fake eq5d ds fn

--- a/vignettes/Model_EQ5D_TTU.Rmd
+++ b/vignettes/Model_EQ5D_TTU.Rmd
@@ -123,7 +123,7 @@ paths_ls$path_to_current_1L_chr <- path_params_ls$path_to_current_1L_chr
 Provide details of dataverse dataset(s) to which results will be posted. If you do not permissions for any dataverse datasets, set `dv_ls <- NULL`.
 
 ```{r echo = TRUE }
-dv_ls <- list(primary_dv_chr = c("firstbounce","https://doi.org/10.7910/DVN/612HDC"))
+dv_ls <- list(primary_dv_chr = c("fakes","https://doi.org/10.7910/DVN/612HDC"))
 ```
 
 # Primary Analysis
