--- a/inst/Markdown/_Write_TS_Mdls.Rmd
+++ b/inst/Markdown/_Write_TS_Mdls.Rmd
@@ -13,5 +13,7 @@ outp_smry_ls <- TTU::write_ts_mdls_from_alg_outp(outp_smry_ls,
                                             predictors_lup = params_ls$predictors_lup,
                                             backend_1L_chr = "cmdstanr",
                                             new_dir_nm_1L_chr = "F_TS_Mdls",
-                                            iters_1L_int = params_ls$iters_1L_int)
+                                            iters_1L_int = params_ls$iters_1L_int, 
+                                            prior_ls = params_ls$prior_ls, 
+                                            control_ls = params_ls$control_ls)
 ```
